--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Hope you like it🙂
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blast</title>
+    <title>Blast your Phone -> By ==> Anubhav</title>
     <style>
         *{
             box-sizing: border-box;
